# Server-OS-P1

./: .gitignore  CMakeLists.txt  README.md
config/: config.cpp
crow/Crow-1.2.1-Linux/lib/cmake/Crow/: CrowTargets.cmake
docs/: api_reference.md  protocolo.md
include/: logger.h  server.h  validate_middleware.h  websocket_global.h  websocket_handler.h
scripts/: run_server.hs  run_test.hs  simulate_clients.cpp
src/: logger.cpp  main.cpp  server.cpp  websocket_handler.cpp
tests/: test_server.cpp
